[UNTESTED] Try emailed Mac fix